--- a/src/wp-content/themes/timber/static/style/events-page.scss
+++ b/src/wp-content/themes/timber/static/style/events-page.scss
@@ -48,18 +48,20 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
+            align-items: center;
             &:hover {
                 border-color: #dfbb13;
                 transition: 0.3s;
             }
-            &-image {
+            > img, &-content {
+                margin-bottom: 10px;
+                margin-top: 10px;
+            }
+            > img {
                 border-radius: 4px;
-                display: flex;
-                align-items: center;
                 border: solid 4px;
                 width: 150px;
                 height: 150px;
-                margin-bottom: 25px;
             }
             &-content {
                 max-width: 600px;
@@ -69,8 +71,7 @@
                 @media( max-width: $tablet_width ) {
                     max-width: 600px;
                 }
-
-                padding: 0 20px;
+                padding: 0 0 0 20px;
                 .event-title {
                     margin-top: 0;
                     margin-bottom: 10px;
