--- a/src/wp-content/themes/timber/blocks/event-rock/assets/rocher.css
+++ b/src/wp-content/themes/timber/blocks/event-rock/assets/rocher.css
@@ -3,41 +3,60 @@
   margin-top: 0;
   position: relative;
   width: 100%;
-  background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-y: -200px;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
   transition: 0.3s;
 }
+@media (max-width: 1400px) {
+  #rocher {
+    transition: 0.3s;
+  }
+}
 #rocher .rocher-content {
   position: absolute;
-  background-size: contain;
   background-repeat: no-repeat;
   height: 800px;
   width: 800px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
-#rocher .rocher-content p {
-  color: white;
-  font-size: 24px;
-  text-align: center;
-  padding: 0 153px;
-}
-#rocher .rocher-title {
-  font-size: 46px;
-  margin-top: 160px;
-  text-align: center;
-  color: white;
-}
-
-@media (max-width: 1400px) {
-  #rocher {
-    background-position-y: 0px;
-    transition: 0.3s;
+@media (max-width: 600px) {
+  #rocher .rocher-content {
+    background-position: top;
+    background-size: cover;
+    max-width: 100%;
   }
+}
+@media (min-width: 600px) {
+  #rocher .rocher-content {
+    background-position: center;
+    background-size: contain;
+  }
+}
+@media (min-width: 600px) {
+  #rocher .rocher-content-text, #rocher .rocher-content-title {
+    padding: 0 153px;
+  }
+}
+@media (max-width: 600px) {
+  #rocher .rocher-content-text, #rocher .rocher-content-title {
+    padding: 0 20px;
+  }
+}
+#rocher .rocher-content-text {
+  color: white;
+  font-size: 20px;
+  text-align: justify;
+}
+#rocher .rocher-content-title {
+  font-size: 40px;
+  text-align: center;
+  color: white;
 }
 
 /*# sourceMappingURL=rocher.css.map */
