--- a/src/wp-content/themes/timber/blocks/event-rock/assets/rocher.scss
+++ b/src/wp-content/themes/timber/blocks/event-rock/assets/rocher.scss
@@ -1,44 +1,60 @@
+@import '../../../static/style/variables-site/structure';
+
 #rocher {
   height: 100vh;
   margin-top: 0;
   position: relative;
   width: 100%;
-  background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-y: -200px;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
   transition: 0.3s;
+  @media (max-width: 1400px) {
+    transition: 0.3s;
+  }
   .rocher{
     &-content {
       position: absolute;
-      background-size: contain;
       background-repeat: no-repeat;
+      @media( max-width: $mobile_width ) {
+        background-position: top;
+        background-size: cover;
+        max-width: 100%;
+      }
+      @media( min-width: $mobile_width ) {
+        background-position: center;
+        background-size: contain;
+      }
       height: 800px;
       width: 800px;
-      p {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      &-text, &-title {
+        @media( min-width: $mobile_width ) {
+          padding: 0 153px;
+        }
+        @media( max-width: $mobile_width ) {
+          padding: 0 20px;
+        }
+      }
+      &-text {
         color: white;
         font-size: 20px;
+        text-align: justify;
+      }
+      &-title {
+        font-size: 40px;
         text-align: center;
-        padding: 0 153px;
+        color: white;
       }
     }
-    &-title {
-      font-size: 40px;
-      margin-top: 160px;
-      text-align: center;
-      color: white;
-    }
+
   }
 }
 
-@media (max-width: 1400px) {
- #rocher {
-   background-position-y: 0px;
-   transition: 0.3s;
- }
-}
+
 
