--- a/src/wp-content/themes/timber/static/style/home-page.css
+++ b/src/wp-content/themes/timber/static/style/home-page.css
@@ -6,11 +6,14 @@ p, span {
   font-family: Arial, "sans-serif";
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
   margin: 0;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
   overflow: hidden;
 }
 
