--- a/src/wp-content/themes/timber/blocks/event-rock/assets/rocher.scss
+++ b/src/wp-content/themes/timber/blocks/event-rock/assets/rocher.scss
@@ -42,9 +42,12 @@
         }
       }
       &-text {
+        text-align: center;
+        @media( max-width: $mobile_width ) {
+          text-align: justify;
+        }
         color: white;
         font-size: 20px;
-        text-align: justify;
       }
       &-title {
         font-size: 40px;
