--- a/src/wp-content/themes/timber/static/style/project-page.scss
+++ b/src/wp-content/themes/timber/static/style/project-page.scss
@@ -4,12 +4,12 @@
 .nav-menu {
   z-index: 5;
 }
-.nav-menu-items > .nav-menu-item a {
-  color: white;
-}
-.nav-menu-icon > svg {
-  fill: white;
-}
+//.nav-menu-items > .nav-menu-item a {
+//  color: white;
+//}
+//.nav-menu-icon > svg {
+//  fill: white;
+//}
 
 .entry-content {
     & > * {
