--- a/src/wp-content/themes/timber/static/style/home-page.css
+++ b/src/wp-content/themes/timber/static/style/home-page.css
@@ -27,8 +27,14 @@ body {
     display: none;
   }
 }
+.exploration--mode {
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 0.6s;
+  transition-delay: 0.5s;
+}
 
-.exploration.exploration--mode {
+svg.exploration--mode {
   visibility: visible;
   opacity: 1;
   transition: opacity 1s;
@@ -44,14 +50,6 @@ body {
   max-height: 100%;
   pointer-events: all;
 }
-
-svg.exploration {
-  width: 100vw;
-  height: 100vh;
-  cursor: none;
-  color: #0b0b0b;
-}
-
 #exploration .fonds {
   z-index: 1;
   background-size: cover;
@@ -61,6 +59,13 @@ svg.exploration {
   width: 100%;
   height: 100%;
   overflow: hidden;
+}
+
+svg.exploration {
+  width: 100vw;
+  height: 100vh;
+  cursor: none;
+  color: #0b0b0b;
 }
 
 /* Exploration link */
