--- a/src/wp-content/themes/timber/static/style/home-page.scss
+++ b/src/wp-content/themes/timber/static/style/home-page.scss
@@ -19,12 +19,20 @@ body {
   @media(max-width: $tablet_width) {
     display: none;
   }
+  &--mode {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 0.6s;
+    transition-delay: 0.5s;
+  }
 }
 
-.exploration.exploration--mode {
-  visibility: visible;
-  opacity: 1;
-  transition: opacity 1s;
+svg.exploration {
+  &--mode {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 1s;
+  }
 }
 
 #exploration {
@@ -36,17 +44,6 @@ body {
   max-width: 100%;
   max-height: 100%;
   pointer-events: all;
-}
-
-
-svg.exploration {
-  width: 100vw;
-  height: 100vh;
-  cursor: none;
-  color: #0b0b0b;
-}
-
-#exploration {
   .fonds {
     z-index: 1;
     background-size: cover;
@@ -59,6 +56,13 @@ svg.exploration {
   }
 }
 
+
+svg.exploration {
+  width: 100vw;
+  height: 100vh;
+  cursor: none;
+  color: #0b0b0b;
+}
 
 /* Exploration link */
 .homepage-explore {
