--- a/src/wp-content/themes/timber/blocks/exploration-rock/assets/exploration-rock.scss
+++ b/src/wp-content/themes/timber/blocks/exploration-rock/assets/exploration-rock.scss
@@ -31,6 +31,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    filter: drop-shadow(-3px 9px 7px black);
   }
 }
 
