--- a/src/wp-content/themes/timber/blocks/exploration-rock/exploration-rock.twig
+++ b/src/wp-content/themes/timber/blocks/exploration-rock/exploration-rock.twig
@@ -8,7 +8,7 @@
 
 <div class="layer roche roche_{{ block.id }} roche_{{ fields.rock_type }} roche_{{ fields.color }}" data-depth="{{ fields.depth }}">
     <a href="{{ fields.project_link }}">
-        <div class="roche-img" style="background-image: url('{{ site.theme.link }}/images/mini_roche_{{ fields.rock_type }}.png')">
+        <div class="roche-img" >
             <span class="text">{{ fields.title }}</span>
         </div>
     </a>
@@ -18,6 +18,15 @@
     .roche_{{ block.id }} {
         bottom: {{ fields.position_bottom }}%;
         right: {{ fields.position_right * -1 }}%;
+    }
+    .roche-img {
+        background-image: url('{{ site.theme.link }}/images/mini_roche_{{ fields.rock_type }}.png');
+    }
+    @media (max-width: 600px) {
+        .roche-img {
+            background-image: url('{{ site.theme.link }}/images/wall-600px.jpg');
+
+        }
     }
 
 </style>
