--- a/src/wp-content/themes/timber/blocks/event-rock/assets/rocher.css
+++ b/src/wp-content/themes/timber/blocks/event-rock/assets/rocher.css
@@ -30,6 +30,7 @@
     background-position: top;
     background-size: cover;
     max-width: 100%;
+    padding-top: 150px;
   }
 }
 @media (min-width: 600px) {
@@ -50,12 +51,13 @@
 }
 #rocher .rocher-content-text {
   text-align: center;
-  color: white;
   font-size: 20px;
+  color: white;
 }
 @media (max-width: 600px) {
   #rocher .rocher-content-text {
     text-align: justify;
+    font-size: 14px;
   }
 }
 #rocher .rocher-content-title {
