--- a/src/wp-content/themes/timber/style.scss
+++ b/src/wp-content/themes/timber/style.scss
@@ -9,6 +9,7 @@ body{
   margin: 0;
 }
 
+@import "static/style/common/common";
 @import "static/style/variables-site/variables-site";
 @import "static/style/mixins/mixins-master";
 @import "static/style/mixins/utilities";
