--- a/src/wp-content/themes/timber/static/style/common/_common.scss
+++ b/src/wp-content/themes/timber/static/style/common/_common.scss
@@ -2,6 +2,6 @@ h1, h2, h3, h4, h5 {
   font-family: Andale Mono, "sans-serif";
 }
 
-p, span {
+p, span, a {
   font-family: Arial, "sans-serif";
 }
