--- a/src/wp-content/themes/timber/static/style/home-page.css
+++ b/src/wp-content/themes/timber/static/style/home-page.css
@@ -2,7 +2,7 @@ h1, h2, h3, h4, h5 {
   font-family: Andale Mono, "sans-serif";
 }
 
-p, span {
+p, span, a {
   font-family: Arial, "sans-serif";
 }
 
