--- a/src/wp-content/themes/timber/static/style/about-page.css
+++ b/src/wp-content/themes/timber/static/style/about-page.css
@@ -2,7 +2,7 @@ h1, h2, h3, h4, h5 {
   font-family: Andale Mono, "sans-serif";
 }
 
-p, span {
+p, span, a {
   font-family: Arial, "sans-serif";
 }
 
@@ -85,6 +85,7 @@ p, span {
   font-size: 1.3em;
   text-decoration: none;
   transition: opacity 0.3s;
+  white-space: nowrap;
   -webkit-touch-callout: none;
   /* iOS Safari */
   -webkit-user-select: none;
