--- a/src/wp-content/themes/timber/static/style/menu.scss
+++ b/src/wp-content/themes/timber/static/style/menu.scss
@@ -70,6 +70,7 @@
                 }
                 text-decoration: none;
                 transition: opacity 0.3s;
+                white-space: nowrap;
                 -webkit-touch-callout: none; /* iOS Safari */
                 -webkit-user-select: none; /* Safari */
                 -moz-user-select: none; /* Old versions of Firefox */
