--- a/src/wp-content/themes/timber/templates/pages/home-page.twig
+++ b/src/wp-content/themes/timber/templates/pages/home-page.twig
@@ -37,7 +37,7 @@
             <circle id="circle-mask" r="300"></circle>
         </mask>
     </defs>
-    <rect width="120%" mask="url(#mask)" ></rect>
+    <rect width="100%" height="100%" mask="url(#mask)" ></rect>
     <circle id="circle-shadow" cx="831" cy="16" r="300"
             style="fill: url(#gradient) transparent; stroke-width: 68px; stroke: black;"></circle>
 </svg>
