--- a/src/wp-content/themes/timber/blocks/exploration-rock/assets/exploration-rock.css
+++ b/src/wp-content/themes/timber/blocks/exploration-rock/assets/exploration-rock.css
@@ -33,6 +33,7 @@
   align-items: center;
   justify-content: center;
   filter: drop-shadow(-3px 9px 7px black);
+  background-position: center;
 }
 
 .roche:hover {
