--- a/src/wp-content/themes/timber/static/style/about-page.scss
+++ b/src/wp-content/themes/timber/static/style/about-page.scss
@@ -19,12 +19,21 @@
     background-size: cover;
     &-title {
         margin-top: 150px;
-        margin-bottom: 100px !important;
+        margin-bottom: 50px !important;
         width: 100% !important;
         max-width: 100% !important;
         text-align: center;
         font-size: 3em;
         text-transform: uppercase;
+    }
+    &-menu {
+        a {
+            text-decoration: none !important;
+            color: white;
+            &:hover {
+                color: rgba(255, 255, 255, 0.7);
+            }
+        }
     }
     &-content {
         max-width: 100% !important;
