--- a/src/wp-content/themes/timber/templates/pages/about-page.twig
+++ b/src/wp-content/themes/timber/templates/pages/about-page.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 <body class="{{body_class}}">
-<div class="aboutPage" style="background-image: url('{{ site.theme.link }}/images/wall.jpg');">
+<div class="aboutPage" style="background-image: url('{{ site.theme.link }}/images/contact-bg.jpg');">
     <header>
         {% include 'mdf-menu.twig' %}
     </header>
