--- a/src/wp-content/themes/timber/static/style/contact-page.scss
+++ b/src/wp-content/themes/timber/static/style/contact-page.scss
@@ -30,8 +30,15 @@
         text-transform: uppercase;
     }
     &-content {
+        .marginAuto {
+            margin: auto !important;
+        }
+        padding: 15px;
         #nf-form-1-cont {
             margin: auto;
+        }
+        .nf-form-content {
+            padding: 0;
         }
         .nf-form-content input[type=button].send-button{
             background: black;
