about page title margin & home page retunr button

--- a/src/wp-content/themes/timber/static/style/about-page.scss
+++ b/src/wp-content/themes/timber/static/style/about-page.scss
@@ -21,6 +21,7 @@
     background-size: cover;
     &-title {
         @include title();
+        margin-top: 300px;
         width: 100% !important;
         max-width: 100% !important;
         text-align: center;
