--- a/src/wp-content/themes/timber/static/style/home-page.scss
+++ b/src/wp-content/themes/timber/static/style/home-page.scss
@@ -53,6 +53,24 @@ svg.exploration {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    .returnLink {
+      position: absolute;
+      border-radius: 73px;
+      margin-left: 5px;
+      margin-top: 5px;
+      &:hover {
+        background-color: #000000b5;
+        transition: 0.3s ease;
+      }
+      transition: 0.3s ease;
+      a {
+        display: flex;
+        padding: 20px;
+        text-decoration: none;
+        color: white;
+        font-weight: bold;
+      }
+    }
   }
 }
 
