--- a/src/wp-content/themes/timber/templates/pages/home-page.twig
+++ b/src/wp-content/themes/timber/templates/pages/home-page.twig
@@ -16,7 +16,7 @@
 
     <div class="layer fonds" data-depth="0"
          style="background-image: url('{{ site.theme.link }}/images/fonds_exploration_v3.jpeg')">
-
+        <div class="returnLink"><a href="{{ site.link }}"><span class="dashicons dashicons-arrow-left-alt2"></span> Accueil</a></div>
     </div>
 
     {% for post in posts %}
