--- a/src/wp-content/themes/timber/static/style/about-page.css
+++ b/src/wp-content/themes/timber/static/style/about-page.css
@@ -10,6 +10,10 @@ p, span, a {
   text-align: center;
 }
 
+.justify {
+  text-align: justify;
+}
+
 /*
  * Chrome renders extra-wide &nbsp; characters for the Hoefler Text font.
  * This results in a jumping cursor when typing in both the Classic and block
@@ -201,6 +205,7 @@ p, span, a {
 .aboutPage-title {
   margin-top: 100px;
   margin-bottom: 50px !important;
+  margin-top: 300px;
   width: 100% !important;
   max-width: 100% !important;
   text-align: center;
