--- a/src/wp-content/themes/timber/static/style/home-page.css
+++ b/src/wp-content/themes/timber/static/style/home-page.css
@@ -6,6 +6,14 @@ p, span, a {
   font-family: Arial, "sans-serif";
 }
 
+.center {
+  text-align: center;
+}
+
+.justify {
+  text-align: justify;
+}
+
 html, body {
   height: 100%;
 }
@@ -59,6 +67,24 @@ svg.exploration--mode {
   width: 100%;
   height: 100%;
   overflow: hidden;
+}
+#exploration .fonds .returnLink {
+  position: absolute;
+  border-radius: 73px;
+  margin-left: 5px;
+  margin-top: 5px;
+  transition: 0.3s ease;
+}
+#exploration .fonds .returnLink:hover {
+  background-color: #000000b5;
+  transition: 0.3s ease;
+}
+#exploration .fonds .returnLink a {
+  display: flex;
+  padding: 20px;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
 }
 
 svg.exploration {
